# ZPE-Touch

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
artifacts/: l6_touch_split_matrix.json
docs/: ARCHITECTURE.md  BOUNDED_SCOPE.md  FAQ.md  L6_TOUCH_BOUNDED_RELEASE_SCOPE.md  LEGAL_BOUNDARIES.md  README.md  SUPPORT.md
docs/_reorientation/2026-04-17/: NOVELTY_CARD.md
geogram5/artifacts/: l6_touch_geogram5.json
geogram5/report/: L6_FINAL_REPORT.md
proofs/artifacts/: contact_release_summary.json  fiber_release_summary.json
proofs/manifests/: VERIFICATION_SUMMARY.md
python/zpe_touch/: __init__.py  codec.py  imc.py  pack.py  types.py
scripts/: generate_contact_release_summary.py  generate_fiber_release_summary.py  generate_l6_geogram5_artifact.py  generate_public_touch_artifacts.py  rerun_touch_matrix.py
src/: lib.rs
tests/: common.py  test_touch_fiber_branches.py  test_touch_fiber_bundles.py  test_touch_native_optional.py  test_touch_pack_regression.py
validation/results/: fresh_clone_verification.json
