[package]
name = "zpe_touch_native"
version = "0.1.0"
edition = "2021"
publish = false
description = "Native extension for the zpe-touch bounded touch stream encoder"

[lib]
name = "zpe_touch_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py311"] }
