[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "zpe-touch"
version = "0.1.0"
description = "Bounded touch stream encoding with explicit contact, thermal, vibrotactile, and proprioceptive adopters"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Zer0paGlyph"}]
keywords = ["touch", "encoding", "haptics", "somatosensory"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
]

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "zpe_touch._native"
